# python-lambda-demo

./: .gitignore
.reuse/: dep5
backend/: build  openapi.yaml
backend/feature-toggles/: README.md  pyproject.toml
backend/feature-toggles/feature_toggles/: handler.py
backend/feature-toggles/tests/: test_feature_toggles.py
backend/http-lib/: pyproject.toml
backend/layers/http-lib/: README.md  pyproject.toml
backend/layers/http-lib/http_lib/: events.py
frontend/: package-lock.json
terraform/: api.tf  frontend.tf  output.tf  provider.tf  routing.tf  toggles.tf
