[tool.poetry]
name = "feature-toggles"
version = "0.1.0"
description = "A Lambda for supplying toggle values"
authors = ["Mike Winter <mail@mikewinter.uk>"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
http-lib = {path = "../layers/http-lib"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
