[tool.poetry]
name = "http-lib"
version = "0.1.0"
description = "Common HTTP classes"
authors = ["Mike Winter <mail@mikewinter.uk>"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
